--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
     <div class="products" id="product-list">
     </div>
   </section>
+  <section id="admin-orders-section" style="display:none;">
+    <div class="section-title">Quản lý đơn hàng</div>
+    <table id="orders-table" style="width:100%; border-collapse: collapse; margin-top: 1em;">
+      <thead>
+        <tr style="background-color: #f0e5d8;">
+          <th>Mã đơn</th>
+          <th>Khách hàng</th>
+          <th>Sản phẩm</th>
+          <th>Tổng tiền</th>
+          <th>Trạng thái</th>
+          <th>Hành động</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </section>
 
   <section class="video-section">
     <div class="section-title">Video giới thiệu</div>
