--- a/index.html
+++ b/index.html
@@ -109,33 +109,33 @@
     }
   });
 
-  function loadOrders() {
-    fetch('https://backend-7j0i.onrender.com/orders')
-      .then(res => res.json())
-      .then(orders => {
-        const tbody = document.querySelector('#orders-table tbody');
-        tbody.innerHTML = '';
+   function loadOrders() {
+      fetch('https://backend-7j0i.onrender.com/orders')
+        .then(res => res.json())
+        .then(data => {
+          const tbody = document.querySelector('#orders-table tbody');
+          tbody.innerHTML = '';
 
-        orders.forEach(order => {
-          const row = document.createElement('tr');
-          row.innerHTML = `
-            <td>${order._id}</td>
-            <td>${order.customerName}</td>
-            <td>${order.items.map(i => `${i.name} x${i.quantity}`).join('<br>')}</td>
-            <td>${order.total.toLocaleString()}₫</td>
-            <td>${order.status}</td>
-            <td>
-              <button onclick="updateOrder('${order._id}', 'Đã xử lý')" style="background-color:#27ae60; color:#fff; border:none; padding:4px 8px; cursor:pointer;">✔ Xử lý</button>
-              <button onclick="deleteOrder('${order._id}')" style="background-color:#c0392b; color:#fff; border:none; padding:4px 8px; cursor:pointer;">🗑 Xóa</button>
-            </td>
-          `;
-          tbody.appendChild(row);
+          data.forEach(order => {
+            const row = document.createElement('tr');
+            row.innerHTML = `
+              <td>${order._id}</td>
+              <td>${order.customerName}</td>
+              <td>${order.items.map(item => `${item.name} x${item.quantity}`).join('<br>')}</td>
+              <td>${order.total.toLocaleString()}₫</td>
+              <td>${order.status}</td>
+              <td>
+                <button class="btn-action" onclick="updateOrderStatus('${order._id}', 'Đã xử lý')">✔ Xử lý</button>
+                <button class="btn-action" style="background-color:#e74c3c;" onclick="deleteOrder('${order._id}')">🗑 Xóa</button>
+              </td>
+            `;
+            tbody.appendChild(row);
+          });
+        })
+        .catch(err => {
+          console.error('Lỗi khi tải đơn hàng:', err);
         });
-      })
-      .catch(err => {
-        console.error('Lỗi khi tải đơn hàng:', err);
-      });
-  }
+    }
 
   function updateOrder(orderId, status) {
     fetch(`https://backend-7j0i.onrender.com/orders/${orderId}`, {
