--- a/content/orders.html
+++ b/content/orders.html
@@ -41,24 +41,20 @@
     <div class="nav-links" id="nav-auth-links"></div>
   </nav>
 
-  <div class="container">
-    <h2>Danh sách đơn hàng</h2>
-    <table id="orders-table">
+  <div class="section-title">Quản lý đơn hàng</div>
+    <table id="orders-table" style="width:100%; border-collapse: collapse; margin-top: 1em;">
       <thead>
-        <tr>
+        <tr style="background-color: #f0e5d8;">
           <th>Mã đơn</th>
-          <th>Tên khách</th>
+          <th>Khách hàng</th>
           <th>Sản phẩm</th>
           <th>Tổng tiền</th>
           <th>Trạng thái</th>
           <th>Hành động</th>
         </tr>
       </thead>
-      <tbody>
-        <!-- Đơn hàng render ở đây -->
-      </tbody>
+      <tbody></tbody>
     </table>
-  </div>
 
   <script src="scripts.js"></script>
   <script>
