--- a/content/orders.html
+++ b/content/orders.html
@@ -38,9 +38,11 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo">MintShop Admin</div>
-    <div class="nav-links" id="nav-auth-links"></div>
-  </nav>
+  <div class="logo">MintShop</div>
+  <div class="nav-links" id="nav-auth-links">
+    <!-- render bằng JS -->
+  </div>
+</nav>
 
   <div class="section-title">Quản lý đơn hàng</div>
   <table id="orders-table" style="width:100%; border-collapse: collapse; margin-top: 1em;">
