--- a/content/orders.html
+++ b/content/orders.html
@@ -6,6 +6,44 @@
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <style>
+    .navbar {
+  width: 100%;
+  padding: 16px 62px;
+  background-color: rgba(255, 255, 255, 0.95);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+}
+
+/* Logo và link */
+.logo {
+  font-size: 22px;
+  font-weight: 600;
+  color: #7b4c2e;
+}
+
+.nav-links {
+  display: flex;
+  gap: 20px;
+  margin-right: 90px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #5a3825;
+  font-weight: 500;
+  font-size: 15px;
+  transition: color 0.2s ease;
+}
+
+.nav-links a:hover {
+  color: #a47148;
+}
     table {
       width: 100%;
       border-collapse: collapse;
