--- a/content/orders.html
+++ b/content/orders.html
@@ -6,7 +6,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <style>
-    .navbar {
+    navbar {
   width: 100%;
   padding: 16px 62px;
   background-color: rgba(255, 255, 255, 0.95);
@@ -21,19 +21,19 @@
 }
 
 /* Logo và link */
-.logo {
+logo {
   font-size: 22px;
   font-weight: 600;
   color: #7b4c2e;
 }
 
-.nav-links {
+nav-links {
   display: flex;
   gap: 20px;
   margin-right: 90px;
 }
 
-.nav-links a {
+nav-links a {
   text-decoration: none;
   color: #5a3825;
   font-weight: 500;
@@ -41,7 +41,7 @@
   transition: color 0.2s ease;
 }
 
-.nav-links a:hover {
+nav-links a:hover {
   color: #a47148;
 }
     table {
