--- a/content/orders.html
+++ b/content/orders.html
@@ -6,6 +6,14 @@
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <style>
+    .section-title {
+  margin-top: 100px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #5a3825;
+  text-align: center;
+}
+
     .navbar {
   width: 100%;
   padding: 16px 62px;
@@ -18,6 +26,7 @@
   left: 0;
   z-index: 999;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      
 }
 
 /* Logo và link */
