--- a/content/orders.html
+++ b/content/orders.html
@@ -6,6 +6,12 @@
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <style>
+    body {
+  font-family: 'Inter', sans-serif;
+  background-color: #fffdfb;
+  color: #333;
+}
+
     .section-title {
   margin-top: 100px;
   font-size: 24px;
