--- a/content/orders.html
+++ b/content/orders.html
@@ -90,7 +90,7 @@
 </head>
 <body>
   <nav class="navbar">
-  <div class="logo">MintShop</div>
+  <a href="/index.html" class="logo">MintShop</a>
   <div class="nav-links" id="nav-auth-links">
     <!-- render bằng JS -->
   </div>
