--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <!-- Navigation Bar -->
 <nav class="navbar">
-  <div class="logo">MintShop</div>
+ <a href="/index.html" class="logo">MintShop</a>
   <div class="nav-links" id="nav-auth-links">
     <!-- render bằng JS -->
   </div>
